add button to show and hide local time

--- a/locations.html
+++ b/locations.html
@@ -40,11 +40,12 @@
               <input size="12" id="washingtonTime" name="washingtonTime" />
             </p>
           </div>
+          <button>Show Time</button>
           <b>Suite 2005, Emirates Building</b>
           <br />10010 Park Street
           <br />Washington WA 98001
           <br /><b>Phone: </b>(342) 555-1209
-          <br /><b>Fax: </b>(342) 555-4001
+          <br /><b>Fax: </b>(342) 555-4001<br />
           <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
         </div>
         <div id="tabs-2">
@@ -55,9 +56,10 @@
               <input size="12" id="montrealTime" name="montrealTime" />
             </p>
           </div>
+          <button>Show Time</button>
           <b>Britain Hall Building</b>
           <br />21275 Lakeshore Road
-          <br />Ste Anne de Bellevue, Montreal, Quebec
+          <br />Ste Anne de Bellevue, Montreal
           <br /><b>Phone: </b>(514) 555-1209
           <br /><b>Fax: </b>(514) 555-4001
           <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
@@ -70,6 +72,7 @@
               <input size="12" id="parisTime" name="parisTime" />
             </p>
           </div>
+          <button>Show Time</button>
           <b>#3000, Notre Dame de Grace</b>
           <br />100 Ste. Phillipe Boulevard
           <br />Paris 12001
@@ -86,6 +89,7 @@
               <input size="12" id="melburneTime" name="melburneTime" />
             </p>
           </div>
+          <button>Show Time</button>
           <b>40050, Victoria Plaza</b>
           <br />10010 Park Street
           <br />Melburne Southest
@@ -101,6 +105,7 @@
               <input size="12" id="seoulTime" name="seoulTime" />
             </p>
           </div>
+          <button>Show Time</button>
           <b>Heritage Building</b>
           <br />10010 Shinhan Street
           <br />Seoul 18007
