create map to the page

--- a/locations.html
+++ b/locations.html
@@ -7,6 +7,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Locations</title>
+  <script type="text/javascript" src="scripts/modernizr.custom.05819.js"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.17/jquery-ui.min.js"></script>
   <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.17/themes/hot-sneaks/jquery-ui.css">
@@ -29,7 +30,7 @@
           <li><a href="#tabs-1">Washington</a></li>
           <li><a href="#tabs-2">Montreal</a></li>
           <li><a href="#tabs-3">Paris</a></li>
-          <li><a href="#tabs-4">Melburne</a></li>
+          <li><a href="#tabs-4">Melbourne</a></li>
           <li><a href="#tabs-5">Seoul</a></li>
         </ul>
         <div id="tabs-1">
@@ -46,7 +47,7 @@
           <br />Washington WA 98001
           <br /><b>Phone: </b>(342) 555-1209
           <br /><b>Fax: </b>(342) 555-4001<br />
-          <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+          <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. </p>
         </div>
         <div id="tabs-2">
           <div class="clock">
@@ -62,7 +63,7 @@
           <br />Ste Anne de Bellevue, Montreal
           <br /><b>Phone: </b>(514) 555-1209
           <br /><b>Fax: </b>(514) 555-4001
-          <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+          <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc.</p>
         </div>
         <div id="tabs-3">
           <div class="clock">
@@ -78,7 +79,7 @@
           <br />Paris 12001
           <br /><b>Phone: </b>(551) 555-1209
           <br /><b>Fax: </b>(551) 555-4001
-          <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.<br/>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel.
+          <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante.Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.<br/>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel.
           </p>
         </div>
         <div id="tabs-4">
@@ -92,10 +93,10 @@
           <button>Show Time</button>
           <b>40050, Victoria Plaza</b>
           <br />10010 Park Street
-          <br />Melburne Southest
+          <br />Melbourne Southest
           <br /><b>Phone: </b>(453) 555-1209
           <br /><b>Fax: </b>(453) 555-4001
-          <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. <br/>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. </p>
+          <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. <br/>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. </p>
         </div>
         <div id="tabs-5">
           <div class="clock">
@@ -111,11 +112,22 @@
           <br />Seoul 18007
           <br /><b>Phone: </b>(252) 555-1209
           <br /><b>Fax: </b>(252) 555-4001
-          <p>Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+          <p>Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Aenean vel metus. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
         </div>
       </div>
+
+      <article>
+        <!-- <div id="cities">
+           <div id="beijing">Beijing</div>
+           <div id="paris">Paris</div>
+           <div id="rio">Rio de Janeiro</div>
+        </div> -->
+        <div id="caption">Current Location</div>
+        <div id="map"></div>
+     </article>
     </main>
   </div>
   <script type="text/javascript" src="scripts/locations.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&callback=geoTest"></script>
 </body>
 </html>
